# pyscape

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
PILSVG/: CMD.py  SVG.py  __init__.py
PILSVG/tests/: __init__.py  test.py
pyscape/: CMD.py  GUI.py  SVG.py  command_line.py
